--- a/Citizen-Dashboard.html
+++ b/Citizen-Dashboard.html
@@ -251,7 +251,6 @@
             left: 0;
             right: 0;
             height: 4px;
-            background: var(--gradient-success);
         }
 
         .score-overview {
@@ -383,7 +382,6 @@
             left: 0;
             right: 0;
             height: 4px;
-            background: var(--gradient-warning);
         }
 
         .section-title {
@@ -510,7 +508,6 @@
             left: 0;
             right: 0;
             height: 4px;
-            background: var(--gradient-secondary);
         }
 
         .activity-item {
@@ -584,7 +581,6 @@
             left: 0;
             right: 0;
             height: 4px;
-            background: var(--gradient-primary);
         }
 
         .goal-item {
@@ -827,11 +823,11 @@
                         </div>
                         <div class="quick-stats">
                             <div class="stat-card">
-                                <div class="stat-number" style="color: var(--accent-green);">98%</div>
+                                <div class="stat-number">72.3%</div>
                                 <div class="stat-label">Compliance Rate</div>
                             </div>
                             <div class="stat-card">
-                                <div class="stat-number" style="color: var(--primary-cyan);">15</div>
+                                <div class="stat-number">15</div>
                                 <div class="stat-label">Days Streak</div>
                             </div>
                         </div>
