--- a/Citizen-Dashboard.html
+++ b/Citizen-Dashboard.html
@@ -622,9 +622,9 @@
             transition: width 2s ease;
         }
 
-        .progress-75 { width: 75%; background: var(--gradient-success); }
+        .progress-75 { width: 75%; background: var(--gradient-primaryx); }
         .progress-45 { width: 45%; background: var(--gradient-warning); }
-        .progress-90 { width: 90%; background: var(--gradient-primary); }
+        .progress-90 { width: 90%; background: var(--gradient-success); }
 
         .goal-deadline {
             color: var(--text-secondary);
